sandbox/output
StringCal.java:8: error: incompatible types: String[] cannot be converted to String
            str = str.split("\n");
                           ^
1 error
